@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.18 2004/03/26 02:27:47 wiz Exp $
+# $NetBSD: Makefile,v 1.19 2004/04/05 02:45:45 xtraeme Exp $
 #
 
 .include "${.CURDIR}/Makefile.common"
-PKGREVISION=	4
 
 COMMENT=	Multithreaded GTK2+ ftp client
 
