@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5442 2004/04/05 02:31:06 xtraeme Exp $
+$NetBSD: CHANGES,v 1.5443 2004/04/05 02:45:44 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1777,3 +1777,5 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated gtk2-engines to 2.2.0nb7 [recht 2004-04-04]
 	Updated TeXmacs to 1.0.3.6 [recht 2004-04-04]
 	Updated lua to 5.0.2 [xtraeme 2004-04-05]
+	Updated gftp to 2.0.17 [xtraeme 2004-04-05]
+	Updated gftp-gtk1 to 2.0.17 [xtraeme 2004-04-05]
